Tweak off-canvas site name to prevent wrapping

--- a/public_html/layout/cms/style.css
+++ b/public_html/layout/cms/style.css
@@ -75,6 +75,10 @@ set of styles.
 	text-decoration:none;
 }
 
+.tm-navbar-brand-oc  {
+	max-width:90% !important;
+}
+
 .tm-navbar-brand-oc a { /* off canvas */
 	text-shadow:none;
 	color: #fff;
